conformance/tests/httproute-retry-with-timeouts.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: retries-with-timeouts
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /retry/request-timeout-500ms
      retry:
        codes:
          - 500
        attempts: 5
      timeouts:
        request: 500ms
      backendRefs:
        - name: infra-backend-v3
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /retry/backend-timeout-500ms
      retry:
        codes:
          - 500
        attempts: 3
      timeouts:
        backendRequest: 500ms
        request: 15s
      backendRefs:
        - name: infra-backend-v3
          port: 8080
